--- a/package.json
+++ b/package.json
@@ -19,13 +19,21 @@
   "homepage": "https://github.com/inon/slack-clone-server#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
-    "nodemon": "^1.18.4"
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-config-airbnb-base": "^12.0.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "nodemon": "^1.12.1"
   },
   "dependencies": {
-    "apollo-server-express": "^2.0.4",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "apollo-server-express": "^1.1.3",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.1",
+    "graphql": "^0.11.7",
+    "graphql-tools": "^2.2.1"
   }
 }
