--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "prettier-eslint": "^8.8.2"
   },
   "dependencies": {
     "apollo-server-express": "^1.1.3",
